--- a/home-app/package.json
+++ b/home-app/package.json
@@ -44,6 +44,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1"
+    "@babel/preset-react": "^7.10.1",
+    "axios": "^0.19.2"
   }
 }
